refactor($multiple): 코드 재배치를 통한 가독성 개선