@@ -5,7 +5,6 @@ import lotto.model.number.LottoNumbers;
 import lotto.model.number_generator.RandomNumberGenerator;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class Lottos {
@@ -19,13 +18,14 @@ public class Lottos {
     public static Lottos generate(int size, RandomNumberGenerator randomNumberGenerator) {
         return new Lottos(IntStream.range(0, size)
                 .mapToObj(iteration -> Lotto.generate(randomNumberGenerator))
-                .toList());
+                .toList()
+        );
     }
 
     public List<Score> calculateScore(WinningLotto winningLotto) {
         return lottos.stream()
                 .map(lotto -> Score.calculateScore(lotto, winningLotto))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<LottoNumbers> getAllLottoNumbers() {
